# shisen_cpp

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-debian-nightly.yml  build-debian-stable.yml  build-ros2-ws-action.yml
data/: capture_settings.json  grpc.json
include/shisen_cpp/: consumer.hpp  node.hpp  provider.hpp  shisen_cpp.hpp  utility.hpp
include/shisen_cpp/camera/image/node/: image_node.hpp
include/shisen_cpp/camera/image/provider/: image_provider.hpp
include/shisen_cpp/camera/node/: camera_node.hpp
include/shisen_cpp/camera/provider/: camera_config_provider.hpp  image_provider.hpp
include/shisen_cpp/config/grpc/: call_data.hpp  call_data_base.hpp  call_data_get_capture_setting.hpp  call_data_get_image.hpp  call_data_get_record_status.hpp  call_data_load_config.hpp  call_data_record_image.hpp  call_data_save_capture_setting.hpp  call_data_set_capture_setting.hpp  call_data_set_record_status.hpp  config.hpp
include/shisen_cpp/config/node/: config_node.hpp
include/shisen_cpp/config/utils/: config.hpp
include/shisen_cpp/consumer/: capture_setting_consumer.hpp  image_consumer.hpp
include/shisen_cpp/example/consumer/: image_consumer.hpp
include/shisen_cpp/example/node/: viewer_node.hpp
include/shisen_cpp/node/: base_node.hpp  camera.hpp  camera_capture.hpp  shisen_cpp_node.hpp  shisen_cpp_viewer_node.hpp  viewer.hpp
include/shisen_cpp/provider/: camera_config_provider.hpp  capture_setting_provider.hpp  image_provider.hpp
include/shisen_cpp/utility/: base_options.hpp  capture_setting.hpp  emptiable.hpp  emptiable.impl.hpp  interface.hpp  mat_image.hpp  options.hpp
include/shisen_cpp/viewer/consumer/: image_consumer.hpp
include/shisen_cpp/viewer/node/: viewer_node.hpp
include/shisen_interfaces/: shisen_interfaces.hpp
launch/: shisen_cpp_launch.py
shisen_cpp/: CMakeLists.txt  package.xml
shisen_cpp/include/shisen_cpp/: interface.hpp  node.hpp  shisen_cpp.hpp  utility.hpp
shisen_cpp/include/shisen_cpp/consumer/: capture_setting_consumer.hpp  compressed_image_consumer.hpp  image_consumer.hpp
shisen_cpp/include/shisen_cpp/node/: camera_node.hpp
shisen_cpp/include/shisen_cpp/provider/: camera_config_provider.hpp  capture_setting_provider.hpp  compressed_image_provider.hpp  image_provider.hpp
shisen_cpp/include/shisen_cpp/utility/: capture_setting.hpp  emptiable.hpp  emptiable.impl.hpp  interface.hpp  options.hpp
shisen_cpp/src/: capture_setting.cpp  interface.cpp
shisen_cpp/src/consumer/: capture_setting_consumer.cpp  image_consumer.cpp
shisen_cpp/src/node/: camera_node.cpp
shisen_cpp/src/provider/: camera_config_provider.cpp
shisen_cpp/src/utility/: interface.cpp
shisen_cpp/test/: capture_setting_test.cpp  compile_test.cpp  emptiable_test.cpp
shisen_interfaces/: CMakeLists.txt  package.xml
shisen_interfaces/include/shisen_interfaces/: shisen_interfaces.hpp
shisen_interfaces/msg/: CameraConfig.msg  CameraSetting.msg  RawImage.msg
src/: shisen_cpp_camera.cpp  shisen_cpp_main.cpp  shisen_cpp_viewer_main.cpp  viewer_main.cpp
src/camera/image/node/: image_node.cpp
src/camera/image/provider/: image_provider.cpp
src/camera/node/: camera_node.cpp
src/camera/provider/: camera_config_provider.cpp  image_provider.cpp
src/consumer/: capture_setting_consumer.cpp  image_consumer.cpp
src/example/consumer/: image_consumer.cpp
src/example/node/: viewer_node.cpp
src/node/: base_node.cpp  camera.cpp  camera_capture.cpp  shisen_cpp_node.cpp  shisen_cpp_viewer_node.cpp  viewer.cpp
src/provider/: camera_config_provider.cpp  capture_setting_provider.cpp  image_provider.cpp
src/shisen_cpp/camera/node/: camera_node.cpp
src/shisen_cpp/camera/provider/: camera_config_provider.cpp  image_provider.cpp
src/shisen_cpp/config/grpc/: call_data_base.cpp  call_data_get_capture_setting.cpp  call_data_get_image.cpp  call_data_get_record_status.cpp  call_data_load_config.cpp  call_data_record_image.cpp  call_data_save_capture_setting.cpp  call_data_set_capture_setting.cpp  call_data_set_record_status.cpp  config.cpp
src/shisen_cpp/config/node/: config_node.cpp
src/shisen_cpp/config/utils/: config.cpp
src/shisen_cpp/node/: shisen_cpp_node.cpp
src/shisen_cpp/utility/: capture_setting.cpp  interface.cpp  mat_image.cpp
src/shisen_cpp/viewer/consumer/: image_consumer.cpp
src/shisen_cpp/viewer/node/: viewer_node.cpp
src/utility/: interface.cpp  mat_image.cpp
src/viewer/consumer/: image_consumer.cpp
src/viewer/node/: viewer_node.cpp
test/: capture_setting_test.cpp  compile_test.cpp  emptiable_test.cpp  mat_image_test.cpp
